<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4000000"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/layout_pickup_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pickup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_place"
                android:textSize="14sp"
                android:textColor="#B8B8B8"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pick_up_nick"
                android:background="@drawable/edit_text_drawable"
                android:layout_width="match_parent"
                android:textColorHint="@color/teal_200"
                android:textColor="@color/white"
                android:layout_height="26dp"
                android:textSize="14sp"
                android:ems="15"
                android:hint="@string/give_a_name"
                android:inputType="text"
                android:paddingStart="6dp"
                android:autofillHints=""
                tools:ignore="RtlSymmetry" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pickup_lat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@id/layout_pickup_name"
        app:layout_constraintStart_toStartOf="@id/layout_pickup_name"
        app:layout_constraintTop_toTopOf="@id/layout_pickup_name">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pickup_lat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_latitude"
                android:textSize="14sp"
                android:textColor="#B8B8B8"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pickup_lat"
                android:background="@drawable/edit_text_drawable"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="26dp"
                android:textSize="14sp"
                android:ems="15"
                android:inputType="text"
                android:paddingStart="6dp"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pickup_lon"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@id/layout_pickup_lat"
        app:layout_constraintStart_toStartOf="@id/layout_pickup_lat"
        app:layout_constraintTop_toTopOf="@id/layout_pickup_lat">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pickup_lon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_longitude"
                android:textSize="14sp"
                android:textColor="#B8B8B8"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pickup_lon"
                android:background="@drawable/edit_text_drawable"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="26dp"
                android:textSize="14sp"
                android:ems="15"
                android:inputType="text"
                android:paddingStart="6dp"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_dropoff_place"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@id/layout_pickup_lon"
        app:layout_constraintStart_toStartOf="@id/layout_pickup_lon"
        app:layout_constraintTop_toTopOf="@id/layout_pickup_lon">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dropoff_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_off_place"
                android:textSize="14sp"
                android:textColor="#B8B8B8"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dropoff_nick"
                android:background="@drawable/edit_text_drawable"
                android:layout_width="match_parent"
                android:textColorHint="@color/teal_200"
                android:textColor="@color/white"
                android:layout_height="26dp"
                android:textSize="14sp"
                android:ems="15"
                android:hint="@string/give_a_name"
                android:inputType="text"
                android:paddingStart="6dp"
                android:autofillHints=""
                tools:ignore="RtlSymmetry" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_dropoff_lat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@id/layout_dropoff_place"
        app:layout_constraintStart_toStartOf="@id/layout_dropoff_place"
        app:layout_constraintTop_toTopOf="@id/layout_dropoff_place">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dropoff_lat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_off_latitude"
                android:textSize="14sp"
                android:textColor="#B8B8B8"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dropoff_lat"
                android:background="@drawable/edit_text_drawable"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="26dp"
                android:textSize="14sp"
                android:ems="15"
                android:inputType="text"
                android:paddingStart="6dp"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_dropoff_lon"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@id/layout_dropoff_lat"
        app:layout_constraintStart_toStartOf="@id/layout_dropoff_lat"
        app:layout_constraintTop_toTopOf="@id/layout_dropoff_lat">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dropoff_lon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_off_longitude"
                android:textSize="14sp"
                android:textColor="#B8B8B8"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dropoff_lon"
                android:background="@drawable/edit_text_drawable"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:paddingLeft="6dp"
                android:layout_height="26dp"
                android:textSize="14sp"
                android:ems="15"
                android:inputType="text"
                android:paddingStart="6dp"
                android:autofillHints=""
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>



    </LinearLayout>

    <Button
        android:id="@+id/goto_webapp_btn"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:text="@string/go_to_uber_web"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_dropoff_lon" />


</androidx.constraintlayout.widget.ConstraintLayout>